--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -56,9 +56,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with: 
+        fetch-depth: 0
     - name: Push to Mirror
     - id: push_to_mirror
-      uses: pixta-dev/repository-mirroring-action@v1
+    - uses: pixta-dev/repository-mirroring-action@v1
       with:
         target_repo_url: ${{ env.MIRROR_URL }}
         ssh_private_key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
