--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -19,17 +19,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Check Coding Style
+      - id: check_coding_style
         run: |
           check.sh $(pwd) $(pwd)
-          if [ -f coding-style-reports.log ]; then
-            while IFS= read -r line; do
-              FILE=$(echo "$line" | cut -d: -f1)
-              LINE=$(echo "$line" | cut -d: -f2)
-              MESSAGE=$(echo "$line" | cut -d: -f3-)
-              echo "::error file=$FILE,line=$LINE::$MESSAGE"
-            done < coding-style-reports.log
-            exit 1
-          fi
+          while IFS= read -r line; do
+            FILE=$(echo "$line" | cut -d: -f1)
+            LINE=$(echo "$line" | cut -d: -f2)
+            MESSAGE=$(echo "$line" | cut -d: -f3-)
+            echo "::error file=$FILE,line=$LINE::$MESSAGE"
+          done < coding-style-reports.log
+          exit 1
+        fi
 
   check_program_compilation:
     needs: check_coding_style
@@ -61,7 +61,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Push to Mirror
-        uses: pixta-dev/repository-mirroring-action@v1
+      - uses: pixta-dev/repository-mirroring-action@v1
         with:
           target_repo_url: ${{ env.MIRROR_URL }}
           ssh_private_key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
