--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -22,14 +22,15 @@ jobs:
       - id: check_coding_style
         run: |
           check.sh $(pwd) $(pwd)
-          while IFS= read -r line; do
-            FILE=$(echo "$line" | cut -d: -f1)
-            LINE=$(echo "$line" | cut -d: -f2)
-            MESSAGE=$(echo "$line" | cut -d: -f3-)
-            echo "::error file=$FILE,line=$LINE::$MESSAGE"
-          done < coding-style-reports.log
-          exit 1
-        fi
+          if [ -f coding-style-reports.log ]; then
+            while IFS= read -r line; do
+              FILE=$(echo "$line" | cut -d: -f1)
+              LINE=$(echo "$line" | cut -d: -f2)
+              MESSAGE=$(echo "$line" | cut -d: -f3-)
+              echo "::error file=$FILE,line=$LINE::$MESSAGE"
+            done < coding-style-reports.log
+            exit 1
+          fi
 
   check_program_compilation:
     needs: check_coding_style
